# ReOldify

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deoldify/: __init__.py  __main__.py  _device.py  api.py  cli.py  dataset.py  filters.py  generators.py  visualize.py
deoldify/ddcolor/: __init__.py  arch.py  convnext.py  filter.py  pipeline.py  position_encoding.py  transformer_utils.py  unet.py
fastai/: basic_train.py  layers.py  metrics.py  torch_core.py
fastai/callbacks/: fp16.py
tests/: test_cli.py  test_device.py
